Fixed an issue where the prices were not lining up withe the right side of the item details on mobile. Adjusted the futurist negative margin for the breadcrumbs

--- a/sources/scss/front/template/content.scss
+++ b/sources/scss/front/template/content.scss
@@ -954,18 +954,26 @@ textarea {
     }
   }
 
-  #cfw-cart-details-review-bar, #cfw-cart-list .cfw-cart-row {
-    margin-left: 0;
-    margin-right: 0;
-    width: 100%;
-
+  #cfw-cart-list .cfw-cart-row {
     & > div:first-child {
       margin-left: 0;
+      width: 18%;
+    }
+
+    & > div:nth-child(2) {
+      width: 64%;
     }
 
     & > div:last-child {
       margin-right: 0;
+      width: 18%;
     }
+  }
+
+  #cfw-cart-details-review-bar, #cfw-cart-list .cfw-cart-row {
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
   }
 
   #cfw-show-cart-details {
